actix-web-thiserror/tests/compile-fail/punct.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/punct.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: Invalid #[response] options: at token ';'
